added deployment code

--- a/src/deployment/index.org
+++ b/src/deployment/index.org
@@ -131,6 +131,15 @@ echo "Installing dependencies.."
 #export http_proxy=$PROXY
 #export https_proxy=$PROXY
 #python setup.py install
+
+mkdir -p build/oursql
+cd build/oursql
+wget https://pypi.python.org/packages/8c/88/9f53a314a2af6f56c0a1249c5673ee384b85dc791bac5c1228772ced3502/oursql-0.9.3.2.tar.gz#md5=ade5959a6571b1626966d47f3ab2d315
+tar xvf oursql-0.9.3.2.tar.gz
+cd oursql-0.9.3.2
+python setup.py install
+
+
 pip install Flask Flask-SQLAlchemy oursql requests flask-cors flask-testing
 if [[ $? -ne 0 ]]; then
   echo "FATAL: Installation failed!"
@@ -241,5 +250,20 @@ setup_db
 exit 0;
 #+END_SRC
 
+* Deploying the application
+   For deploying the application, we use WSGI standard for Python
+   applications.
+   For that we need to write a WSGI script as follows.
+#+BEGIN_SRC python :tangle ../userdirectory.wsgi :eval no
+import sys, os
 
+BASE_DIR = BASE_DIR = os.path.join(os.path.dirname(os.path.abspath(__file__)))
 
+sys.path.insert(0, BASE_DIR)
+
+from src.app import create_app
+from src import config
+
+application = create_app(config)
+
+#+END_SRC
