--- a/src/implementation/rest/index.org
+++ b/src/implementation/rest/index.org
@@ -187,76 +187,67 @@ def create_role():
    user can only update himself. Also, an admin cannot delete himself.
 *** Implementation
 #+BEGIN_SRC python :tangle ../../src/api.py :eval no
-@api.route('/users/<int:id>', methods=['PUT', 'DELETE'])
-def update_delete_user(id):
+@api.route('/users/<int:id>', methods=['PUT'])
+def update_user(id):
     global system
     session = None
-    ### Check if there is a session and act according to the specification
-    #if 'session' not in request.json:
-    #    print "throw error"
-    #else:
-    #    print "Check according to your specification"
+                   
+    system.get_users_from_database()
+    record = User.get_by_id(id)
+    if not record:
+        abort(404, 'No %s with id %s' % (user, id))
     
-
     
-    #print request.json['session']
+    
+    for s in system.session_set:
+        if s.user.email==request.json['session']:
+            session=s
+    
+    print session.user.email
+    new_data = {}
+    try:
+        if 'name' in request.json:
+            system.set_name_of_user(record, request.json['name'], session)
+        if 'email' in request.json:
+            system.set_email_of_user(record, request.json['email'], session)
+        if 'role_id' in request.json:
+            role = Role.get_by_id(request.json['role_id'])
+        
+        record.role = role
+        record.update()
 
-    #admin_user = User.get_by_id(1)
-    #system.add_session(admin_user)
-    #session = system.session_set[0]
+        return jsonify(User.get_by_id(id).to_client())
+    except Exception, e:
+        current_app.logger.error("Error occured while updating"
+                                     " user record %d: %s" % (id, str(e)))
+        abort(500, str(e))
+
+
+
+@api.route('/users/<int:id>', methods=['DELETE'])
+def delete_user(id):
+    global system
+    session = None
                    
     system.get_users_from_database()
     record = User.get_by_id(id)
     if not record:
         abort(404, 'No %s with id %s' % (user, id))
 
-    if request.method == 'DELETE':
     
-        delete_session_email= request.headers.get('session')
-        delete_session = None
-        for x in system.session_set:
-            if x.user.email == delete_session_email:
-                delete_session = x
-        try:
-            #record.delete()
-            system.del_user(record,delete_session)
-            return jsonify(id=id, status="success")
-        except Exception, e:
-            current_app.logger.error("Error occured while deleting"
+    delete_session_email= request.headers.get('session')
+    delete_session = None
+    for x in system.session_set:
+        if x.user.email == delete_session_email:
+            delete_session = x
+    try:
+   
+        system.del_user(record,delete_session)
+        return jsonify(id=id, status="success")
+    except Exception, e:
+        current_app.logger.error("Error occured while deleting"
                                      "user record %d: %s" % (id, str(e)))
-            abort(500, str(e))
-
-    if request.method == 'PUT':
-    
-        print system.session_set
-        for x in system.session_set:
-            print x.user.email
-        for s in system.session_set:
-            if s.user.email==request.json['session']:
-                session=s
-    
-        print session.user.email
-        new_data = {}
-        try:
-            if 'name' in request.json:
-                #new_data['name'] = request.json['name']
-                system.set_name_of_user(record, request.json['name'], session)
-            if 'email' in request.json:
-                #new_data['email'] = request.json['email']
-                system.set_email_of_user(record, request.json['email'], session)
-            if 'role_id' in request.json:
-                role = Role.get_by_id(request.json['role_id'])
-                #new_data['role'] = role
-
-            record.role = role
-            record.update()
-
-            return jsonify(User.get_by_id(id).to_client())
-
-        except Exception, e:
-            current_app.logger.error("Error occured while updating"
-                                     " user record %d: %s" % (id, str(e)))
-            abort(500, str(e))
+        abort(500, str(e))
 
 #+END_SRC
 ** Update/Delete a role
@@ -769,13 +760,10 @@ class TestUser(TestCase):
         system.get_users_from_database()
         #s=Session(user=user1)
         system.add_session(user1)
-        payload = {'session': 'admin@xyz.com'}
 
-        headers = {'content-type': 'application/json'}
+        headers = {'content-type': 'application/json', 'session': 'admin@xyz.com'}
 
-        response = self.client.delete("/users/2",
-                                      data=json.dumps(payload),
-                                      headers=headers)
+        response = self.client.delete("/users/2", headers=headers)
 
         self.assertEqual(response.status_code, 200)
 
