Edited set_email() functionality, to allow user to retain old email id

--- a/src/implementation/persistence/index.org
+++ b/src/implementation/persistence/index.org
@@ -1439,7 +1439,7 @@ class TestSystem(TestCase):
         #    print x.user.email
         if session in self.session_set:
             check = filter(lambda x: x.email == email, self.user_set)
-            if not check:
+            if not check or user.email == email:
                 if user in self.user_set:
                     if session.user.role.name == "admin":
                         user.set_email(email)
